@@ -1,3 +1,8 @@
+2007-04-23  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixxml/config/BuildTimePropTask.java (execute): 
+	Make ant properties available using "__antprop_" prefix.
+
 2007-04-20  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: Check
